--- a/frontend/src/assets/css/styles.css
+++ b/frontend/src/assets/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet');
+
 body {
   font-family: "Open Sans", sans-serif;
   color: #272829;
@@ -14,6 +16,194 @@ a:hover {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
+}
+/*--------------------------------------------------------------
+# page home
+--------------------------------------------------------------*/
+*{
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
+
+.wave{
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	height: 100%;
+	z-index: -50;
+}
+
+.containerr{
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap :7rem;
+    padding: 0 2rem;
+}
+
+.bg{
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+}
+
+
+.login-content {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	text-align: center;
+}
+
+.bg{
+	width: 500px;
+}
+
+form{
+	width: 360px;
+}
+
+.avatar {
+    height: 100px;
+}
+
+.login-content h2{
+	margin: 15px 0;
+	color: #333;
+	text-transform: uppercase;
+	font-size: 2.9rem;
+}
+
+.login-content .input-div{
+	position: relative;
+    display: grid;
+    grid-template-columns: 7% 93%;
+    margin: 25px 0;
+    padding: 5px 0;
+    border-bottom: 2px solid #d9d9d9;
+}
+
+.login-content .input-div.one{
+	margin-top: 0;
+}
+
+.i{
+  position: '';
+	top: -50%;
+	color: #38d39f;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+
+.input-div > div{
+  position: relative;
+	height: 45px;
+}
+
+.input-div > div > h5{
+	position: '';
+	left: 20px;
+	top: 50%;
+  bottom: -2px;
+  width: 0%;
+	height: 20px;
+	transform: translateY(-50%);
+	color: #999;
+	font-size: 18px;
+	transition: .3s;
+}
+
+.input-div > div > input{
+	position: absolute;
+	left: -15px;
+	top: 45%;
+	width: 100%;
+	height: 100%;
+	border: none;
+	outline: none;
+	background: none;
+	padding: 0.5rem 0.7rem;
+	font-size: 1.2rem;
+	color: #555;
+	font-family: sans-serif;
+}
+
+a{
+	display: '';
+	text-align: '';
+	text-decoration: none;
+	color: #999;
+	font-size: 0.9rem;
+	transition: .3s;
+}
+
+a:hover{
+	color: #38d39f;
+}
+
+.btn{
+	display: block;
+	width: 100%;
+	height: 50px;
+	border-radius: 25px;
+	outline: none;
+	border: none;
+	background-image: linear-gradient(to right, #38d39f, #38d39f, #38d39f);
+	background-size: 200%;
+	font-size: 1.2rem;
+	color: #fff;
+	font-family: sans-serif;
+	text-transform: uppercase;
+	margin: 1rem 0;
+	cursor: pointer;
+	transition: .5s;
+}
+.btn:hover{
+	background-position: right;
+}
+
+
+@media screen and (max-width: 1050px){
+	.container{
+		grid-gap: 5rem;
+	}
+}
+
+@media screen and (max-width: 1000px){
+	form{
+		width: 290px;
+	}
+
+	.login-content h2{
+        font-size: 2.4rem;
+        margin: 8px 0;
+	}
+
+	.bg{
+		width: 400px;
+	}
+
+}
+
+@media screen and (max-width: 900px){
+	.container{
+		grid-template-columns: 1fr;
+	}
+
+	.bg{
+		display: none;
+	}
+	.wave{
+		display: none;
+	}
+
+	.login-content{
+		justify-content: center;
+	}
 }
 
 /*--------------------------------------------------------------
